--- a/src/main/resources/templates/formularioCliente.html
+++ b/src/main/resources/templates/formularioCliente.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -8,22 +8,31 @@
 <body>
 <div class="container p-5 my-5 bg-dark text-white">
     <h2 class="text-center text-light mb-4">Crear Cliente</h2>
-    <form action="http://localhost:8080/cliente/guardar" method="post">
+    <!--Formulario de Cliente-->
+    <form th:action="@{/cliente/insertarCliente}" th:object="${cliente}" method="post">
+        <!--Campo Nombre-->
         <div class="mb-3">
             <label for="nombre" class="form-label">Nombre</label>
-            <input type="text" class="form-control" id="nombre" name="nombre">
+            <input type="text" class="form-control" id="nombre" th:field="*{nombre}">
+            <span th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}" class="text-danger"></span>
         </div>
+        <!--Campo Apellido-->
         <div class="mb-3">
             <label for="apellido" class="form-label">Apellido</label>
-            <input type="text" class="form-control" id="apellido" name="apellido">
+            <input type="text" class="form-control" id="apellido" th:field="*{apellido}">
+            <span th:if="${#fields.hasErrors('apellido')}" th:errors="*{apellido}" class="text-danger"></span>
         </div>
+        <!--Campo Email-->
         <div class="mb-3">
             <label for="email" class="form-label">Email</label>
-            <input type="email" class="form-control" id="email" name="email">
+            <input type="email" class="form-control" id="email" th:field="*{email}">
+            <span th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="text-danger"></span>
         </div>
-        <button type="submit" class="btn btn-primary">Guardar</button>
+        <!--Botón Guardar-->
+        <button type="submit" class="btn btn-success">Insertar</button>
     </form>
-    <a href="http://localhost:8080/cliente/listar" class="btn btn-primary mt-3">Regresar</a>
+    <!--Botón Regresar-->
+    <a th:href="@{/cliente/listar}" class="btn btn-primary mt-3">Regresar</a>
 </div>
 
 </body>
