--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/index.css">
     <title>Inicio</title>
 </head>
 <body>
-
-<h1>¡Bienvenido a la aplicación de Gestion de Pedidos!</h1>
-
-<p>Para ver la lista de clientes, haz clic en el siguiente enlace:</p>
-
-<a href="http://localhost:8080/cliente/listar">Ir a la lista de clientes</a>
-
+<div class="container p-5 my-5 bg-body-secondary text-white">
+    <h1>¡Bienvenido a la aplicación de Gestion de Pedidos!</h1>
+    <p class="text-center text-black-50 mb-4">Para ver la lista de clientes, haz clic en el siguiente enlace:</p>
+    <a th:href="@{/cliente/listar}" class="btn btn-primary">Ir a la lista de clientes</a>
+</div>
 </body>
 </html>
