--- a/src/main/resources/templates/lista-clientes.html
+++ b/src/main/resources/templates/lista-clientes.html
@@ -2,7 +2,6 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="utf-8">
-    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/styles.css">
@@ -29,9 +28,9 @@
         </tr>
         </tbody>
     </table>
-    <a href="http://localhost:8080" class="btn btn-primary mb-3">Regresar</a>
+    <a th:href="@{/}" class="btn btn-primary mb-3">Regresar</a>
     <br/>
-    <a href="http://localhost:8080/cliente/formularioCliente" class="btn btn-success mb-3">Crear</a>
+    <a th:href="@{/cliente/muestraFormularioAgregar}" class="btn btn-success mb-3">Agregar Cliente</a>
 
 </div>
 </body>
