:sparkles: Implementación actualizar clientes.
Detalles adicionales:
👔 Se crea el servicio para consultar el cliente por id 'getClienteById'.
👔 Se crean los métodos 'muestraFormularioModificar' y 'actualizarCliente' en el Controlador.
🚸 Se importan las librerias de jquery y toastr asi como el script para crear los mensajes emergentes tipo toastr y se actualizan/crean las vistas html de formularioCliente.html, formularioModificarCliente.html, index.html y lista-clientes.html.
💄 Se añade el estilo del input Id de los formularios en el styles.css.

--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -45,3 +45,10 @@ tr:hover {
     transform: scale(1.01);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
+
+/* FORMULARIOS */
+/*Input de Id deshabilitados*/
+.bg-dark-gray {
+    background-color: darkgray; /* Color gris oscuro */
+}
+
