--- a/src/main/resources/templates/formularioCliente.html
+++ b/src/main/resources/templates/formularioCliente.html
@@ -2,6 +2,8 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>Crear Cliente</title>
 </head>
@@ -13,19 +15,22 @@
         <!--Campo Nombre-->
         <div class="mb-3">
             <label for="nombre" class="form-label">Nombre</label>
-            <input type="text" class="form-control" id="nombre" th:field="*{nombre}">
+            <input type="text" class="form-control" id="nombre" th:field="*{nombre}" placeholder="Ingrese el nombre"
+                   required="required">
             <span th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}" class="text-danger"></span>
         </div>
         <!--Campo Apellido-->
         <div class="mb-3">
             <label for="apellido" class="form-label">Apellido</label>
-            <input type="text" class="form-control" id="apellido" th:field="*{apellido}">
+            <input type="text" class="form-control" id="apellido" th:field="*{apellido}"
+                   placeholder="Ingrese el apellido" required="required">
             <span th:if="${#fields.hasErrors('apellido')}" th:errors="*{apellido}" class="text-danger"></span>
         </div>
         <!--Campo Email-->
         <div class="mb-3">
             <label for="email" class="form-label">Email</label>
-            <input type="email" class="form-control" id="email" th:field="*{email}">
+            <input type="email" class="form-control" id="email" th:field="*{email}" placeholder="Ingrese el email"
+                   required="required">
             <span th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="text-danger"></span>
         </div>
         <!--Botón Guardar-->
