:sparkles: Implementación eliminar clientes.
Detalles adicionales:
👔 Se crea el servicio para eliminar el cliente por id 'getDeleteById'.
👔 Se crean los métodos 'getDeleteById' y en el Controlador.
🚸 Se implementa mensaje de confirmación para eliminar el cliente.
🩹 Se corrige un condcional del toastr del formularioModificarCliente.html
💄 Se agrega el boton Eliminar en la clase lista-clientes.html.

--- a/src/main/resources/templates/formularioModificarCliente.html
+++ b/src/main/resources/templates/formularioModificarCliente.html
@@ -65,6 +65,10 @@
             toastr.success("Cliente actualizado con éxito!");
         } else if (msg === "updateError") {
             toastr.error("El cliente no se pudo actualizar");
+        } else if (msg === "deleteOk") {
+            toastr.error("Cliente eliminado con éxito!");
+        } else if (msg === "deleteError") {
+            toastr.error("El cliente no se pudo eliminar");
         }
     }
 
