--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,20 +8,43 @@
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="/static/login.css">
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            background-color: #17a2b8;
+            height: 100vh;
+        }
+        #login .container #login-row #login-column #login-box {
+            margin-top: 120px;
+            max-width: 600px;
+            height: 320px;
+            border: 1px solid #9C9C9C;
+            background-color: #EAEAEA;
+        }
+        #login .container #login-row #login-column #login-box #login-form {
+            padding: 20px;
+        }
+        #login .container #login-row #login-column #login-box #login-form #register-link {
+            margin-top: -85px;
+        }
+    </style>
+
 
 </head>
 
 <body>
 <!--Bootstrap-->
 <div id="login">
-    <h3 class="text-center text-white pt-5">Bienvenido</h3>
     <div class="container">
         <div id="login-row" class="row justify-content-center align-items-center">
             <div id="login-column" class="col-md-6">
                 <div id="login-box" class="col-md-12">
                     <form id="login-form" class="form" th:action="@{/autenticacionUsuario}" method="post">
                         <h3 class="text-center text-info">Acceso</h3>
+                        <div th:if="${error}" class="alert alert-danger" role="alert">
+                            <p th:text="${error}">Usuario o contraseña incorrectos</p>
+                        </div>
                         <div class="form-group">
                             <label for="username" class="text-info">Nombre de Usuario:</label><br>
                             <input type="text" name="username" id="username" class="form-control" required>
