--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,8 +7,22 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/index.css">
     <title>Inicio</title>
+    <style>
+        .logout-container {
+            position: absolute;
+            top: 0.5px;
+            right: 10px;
+        }
+    </style>
 </head>
 <body>
+<!--Botón Log-out-->
+<div class="logout-container">
+    <a class="btn btn-dark btn-lg text-white" th:href="@{/logout}">
+        <span class="glyphicon glyphicon-log-out">Cerrar sesión</span>
+    </a>
+</div>
+
 <div class="container p-5 my-5 bg-body-secondary text-white">
     <h1>¡Bienvenido a la aplicación de Gestion de Pedidos!</h1>
     <p class="text-center text-black-50 mb-4">Para ver la lista de clientes, haz clic en el siguiente enlace:</p>
