🚧 Ocultación de vistas html sehun el rol del usuario
Detalles adicionales:
🚧 Se agrega un nuevo mapeo de assistants en el método de securityFilterChain para el voluntario.
🛂 Se agrega el controlador muestraAsitentes para mapear el htm de los de la vista de los asistentes.
💄 Construcción del archivo lista-asistentes.htmll el cual muestra la vista html a la cual podran acceder los voluntario.
🚧 Se agrega las etiquetas security en la clase index.html en los distintos roles para poder ocultar las vistas html a quien no tenga permiso.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,10 +25,25 @@
 
 <!--Botón Log-out-->
 <div class="logout-container">
-    <p>
-        <a th:href="@{/administradores}" class="btn btn-outline-info">Ir a zona de
-            Administradores</a>
-    </p>
+
+    <!--todo: Organizar la restricción de la vista de los roles porque no esta funcionando.-->
+    <!--Zona ayudantes-->
+    <security authorize="hasRole('USER')">
+        <p>
+            <a th:href="@{/assitants}" class="btn btn-outline-info">Ir a zona de
+                Asistentes</a>
+        </p>
+    </security>
+
+    <!--Zona administradores-->
+    <security authorize="hasRole('ADMIN')">
+        <p>
+            <a th:href="@{/administradores}" class="btn btn-outline-info">Ir a zona de
+                Administradores</a>
+        </p>
+    </security>
+
+    <!--Boton cerrar sesión-->
     <a class="btn btn-dark btn-lg text-white" th:href="@{/logout}">
         <span class="glyphicon glyphicon-log-out">Cerrar sesión</span>
     </a>
